--- a/server/package.json
+++ b/server/package.json
@@ -4,5 +4,16 @@
     "express": "^5.1.0",
     "node": "^22.15.0",
     "pg": "^8.15.6"
-  }
+  },
+  "name": "server",
+  "version": "1.0.0",
+  "main": "app.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
