--- a/server/package.json
+++ b/server/package.json
@@ -7,10 +7,12 @@
   },
   "name": "server",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "server.js",
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server",
+    "dev": "node --watch server"
   },
   "keywords": [],
   "author": "",
