--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server",
+    "start": "node db/init_db.js && node server.js",
     "dev": "node --watch server"
   },
   "keywords": [],
